--- a/package.json
+++ b/package.json
@@ -53,7 +53,12 @@
     "@vscode/test-cli": "^0.0.6",
     "@vscode/test-electron": "^2.3.9",
     "concurrently": "^8.2.2",
+    "css-loader": "^7.1.2",
     "eslint": "^8.56.0",
+    "postcss": "^8.4.39",
+    "postcss-loader": "^8.1.1",
+    "style-loader": "^4.0.0",
+    "tailwindcss": "^3.4.4",
     "ts-loader": "^9.5.1",
     "typescript": "^5.3.3",
     "webpack": "^5.90.3",
