--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
         {
           "id": "filterFlickSidebar",
           "title": "FilterFlick",
-          "icon": "resources/filter.svg"
+          "icon": "resources/FilterFlick.png"
         }
       ]
     },
