chore: add package info

--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "displayName": "FilterFlick",
   "description": "Instantly filter and view your text in a split editor layout.",
   "version": "0.0.1",
+  "license": "MIT",
+  "publisher": "YusukeTakeuchi",
+  "repository": "https://github.com/YusukeTakeuchi/FilterFlick",
   "engines": {
     "vscode": "^1.87.0"
   },
