--- a/package.json
+++ b/package.json
@@ -37,8 +37,8 @@
   "scripts": {
     "vscode:prepublish": "npm run package",
     "compile": "webpack && webpack --config webpack.webview.config.js",
-    "watch": "webpack --watch --mode development",
-    "package": "webpack --mode production --devtool hidden-source-map",
+    "watch": "concurrently 'webpack --watch --mode development' 'webpack --watch --mode development --config webpack.webview.config.cjs'",
+    "package": "webpack --mode production --devtool hidden-source-map && webpack --mode production --devtool hidden-source-map --config webpack.webview.config.cjs",
     "compile-tests": "tsc -p . --outDir out",
     "watch-tests": "tsc -p . -w --outDir out",
     "pretest": "npm run compile-tests && npm run compile && npm run lint",
