--- a/package.json
+++ b/package.json
@@ -15,6 +15,12 @@
   "activationEvents": [],
   "main": "./dist/extension.js",
   "contributes": {
+    "commands": [
+      {
+        "command": "filterFlick.execute",
+        "title": "FilterFlick: Execute"
+      }
+    ],
     "viewsContainers": {
       "activitybar": [
         {
